--- a/bs5/Swiper.PartEmpty.cshtml
+++ b/bs5/Swiper.PartEmpty.cshtml
@@ -1,9 +1,9 @@
 @inherits AppCode.Razor.AppRazor
 @using AppCode.Data
 @{
-  var swiper = As<Slider>(MyItem);
+  var slider = As<Slider>(MyItem);
 }
-<div class="app-swiper2-empty-slides container" @Kit.Toolbar.Default(swiper.Children("Slides"))>
+<div class="app-swiper2-empty-slides container" @Kit.Toolbar.Default(slider.Slides)>
   <div class="arrow">
   <div class="line"></div>
   <div class="point"></div>
