--- a/bs5/Swiper.cshtml
+++ b/bs5/Swiper.cshtml
@@ -2,16 +2,16 @@
 @using ToSic.Razor.Blade
 @using AppCode.Data
 @{
+  // TODO: @2dg - rename to slider to not confuse...
   // The current swiper (can also be a demo item, if nothing has been added yet)
-  var swiper = As<Slider>(MyItem);
+  var slider = As<Slider>(MyItem);
   
   // Merge settings on swiper with predefined Settings, so we always have all setting, even if not specified at the item level
-  var swiperSettings = AsStack(swiper, App.Settings);
+  var swiperSettings = AsStack<Slider>(slider, App.Settings);
 
   // Figure out width (eg. '100%', '1200px') and height ("100vh" or a ratio like "x:y")
-  var sliderWidth = swiperSettings.String("Width");
-
-  var sliderHeightOrRatio = swiperSettings.String("Height");
+  var sliderWidth = swiperSettings.Width;
+  var sliderHeightOrRatio = swiperSettings.Height;
 
   // Prepare style to set height or aspect ratio (determined by the ":" in the height)
   var isRatio = sliderHeightOrRatio.IndexOf(":") > 0;
@@ -19,40 +19,40 @@
   var swiperContainerHeight = isRatio ? "" : "height: " + sliderHeightOrRatio + ";";
 
   // Toolbar for the swiper itself
-  var swiperToolbar = Kit.Toolbar.Default().Settings(hover: "left", autoAddMore: "start");
+  var swiperToolbar = Kit.Toolbar.Default()
+    .Settings(hover: "left", autoAddMore: "start");
 
   // The toolbar (or a demo-info-toolbar if it's just a preview)
-  var slideToolbar = Kit.Toolbar.Default().Delete().DetectDemo(swiper, message: App.Resources.String("ToolbarSlideIsDemo"));
+  var slideToolbar = Kit.Toolbar.Default()
+    .Delete()
+    .DetectDemo(slider, message: App.Resources.ToolbarSlideIsDemo);
 }
 
-<div class="app-swiper2" @swiperToolbar.For(swiper) style="@aspectRatioStyle">
+<div class="app-swiper2" @swiperToolbar.For(slider) style="@aspectRatioStyle">
   @* Slider main container and wrapper *@
-  <div class="swiper swiper-@swiper.Id" style="width: @sliderWidth; @swiperContainerHeight">
+  <div class="swiper swiper-@slider.Id" style="width: @sliderWidth; @swiperContainerHeight">
     <div class="swiper-wrapper">
 
       @* if we don't have slides, show a dummy slide and provide buttons to start adding *@
-      @if (!swiper.Slides.Any()) {
+      @if (!slider.Slides.Any()) {
         @Html.Partial("Swiper.PartEmpty.cshtml")
       } 
 
       @* Slides - Add each one (if there are any) *@
-      @foreach (var slide in swiper.Slides) {
-
+      @foreach (var slide in slider.Slides)
+      {
         // Merge settings of the current slide, the swiper defaults and the App settings/defaults
-        var sldSettings = AsStack(slide, swiper, App.Settings);
-        var overlayEffect = sldSettings.String("OverlayEffect");  // Positioning
-        var duration = sldSettings.Int("ShowDuration");           // time the slide will show if auto-playing
-        var textPos = sldSettings.String("TextPosition");
-        var darkContent = sldSettings.Bool("DarkContent");
+        var slideSettings = AsStack<Slide>(slide, slider, App.Settings);
+        var textPos = slideSettings.TextPosition; // Text position for generating CSS classes
 
-        <div class="swiper-slide" data-swiper-autoplay="@duration" @slideToolbar.For(slide)>
-          <div class="image-wrapper @SlideWrapperClasses(textPos, overlayEffect, darkContent)">
+        <div class="swiper-slide" data-swiper-autoplay="@slideSettings.ShowDuration" @slideToolbar.For(slide)>
+          <div class="image-wrapper @SlideWrapperClasses(slideSettings)">
             @* Add the <picture> tag with all the sources *@
             @slide.Picture("Image", settings: "Content", factor: sliderHeightOrRatio, imgAltFallback: slide.Title)
             @* Check if Text has real Values *@
             @if (Text.Has(Text.First(slide.Title, slide.Text, slide.LinkText))) {
               @* Show Overlay behind text *@
-              <div class="overlay overlay-@overlayEffect"></div>
+              <div class="overlay overlay-@slideSettings.OverlayEffect"></div>
 
               <div class='d-flex position-relative h-100 @OverlayAlignClasses(textPos)'>
                 <div class="w-100 py-3 py-md-4 px-3 px-md-5 @OverlayTextAlignClasses(textPos)">
@@ -80,16 +80,17 @@
     </div>
 
     @* Pagination *@
-    @if (swiperSettings.Bool("ShowPaginationDots")) {
+    @if (swiperSettings.ShowPaginationDots) {
       <div class="swiper-pagination"></div>
     }
 
     @* Navigation buttons (right left arrows) *@
-    @if (swiperSettings.Bool("ShowPaginationArrows")) {
-      <div class="swiper-button-prev swiper-button-prev-@swiper.Id"></div>
-      <div class="swiper-button-next swiper-button-next-@swiper.Id"></div>
+    @if (swiperSettings.ShowPaginationArrows)
+    {
+      <div class="swiper-button-prev swiper-button-prev-@slider.Id"></div>
+      <div class="swiper-button-next swiper-button-next-@slider.Id"></div>
     }
   </div>
 </div>
 
-@Html.Partial("Swiper.PartAssets.cshtml", new { swiper, swiperSettings })
+@Html.Partial("Swiper.PartAssets.cshtml", new { slider, swiperSettings })
